cabeçalho e content atualizados e otimizados de acordo com os parâmetros pre-estabelecidos no Figma

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 <header class="cabecalho">
+    <img class="menu__logo" src="./assets/Logo.png" alt="treine.me">
     <nav class="cabecalho__menu">
-        <img class="menu__logo" src="./assets/Logo.png" alt="treine.me">
-        <a class="cabecalho__menu__link">Home</a>
+        <a class="cabecalho__menu__link"><strong>Home</strong></a>
         <a class="cabecalho__menu__link">About</a>
         <a class="cabecalho__menu__link">Training</a>
     </nav>
