Rodape fixed and ready to roll

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <img class="intro__img__fit" src="./assets/fitness-jump.png" alt="woman exercizing">
     </section>
 </main>
-    <footer class="foot">
-        <p>send us a message <strong>@treine.me</strong></p>
-        <img class="foot__image" src="./assets/balls-decoration.png">
+    <footer class="rodape">
+        <p class="rodape__texto">send us a message <strong>@treine.me</strong></p>
+        <img class="rodape__image" src="./assets/balls-decoration.png">
         
     </footer>
 </body>
